Added Cards and Made them resizeable

--- a/main.html
+++ b/main.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Hotelite</title>
-        <link rel="stylesheet" href="src/styles.css">
-    </head>
-    <body>
-        <img src="src/038-hotel.svg" alt=""style="width:100px">
-        <h1>Hotelite</h1>
-        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="src/styles.css">
+</head>
+
+<body>
+    <div class="titleCard">
+
+        <h1 class="mainTitle">Hotelite</h1>
+
+    </div>
+    <div class="trendingArea">
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <div class="side-crop">
+                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                    </div>
+                    <div class="conatiner">
+                        <p class="title">Skarner Gaming</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="side-crop">
+                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                    </div>
+                    <div class="conatiner">
+                        <p class="title">Skarner Gaming</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="side-crop innershadow">
+                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                    </div>
+                    <div class="conatiner">
+                        <p class="title">Skarner Gaming</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</body>
+
 </html>
