--- a/main.html
+++ b/main.html
@@ -14,10 +14,18 @@
     <div class="titleCard">
 
         <h1 class="mainTitle">Hotelite</h1>
+        <div id="wrap">
+            <form action="" autocomplete="on">
+            <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input id="search_submit" value="Rechercher" type="submit">
+            </form>
+          </div>
 
     </div>
     <div class="trendingArea">
         <div class="row">
+            <div class="column">
+                <h3>Trending</h3>
+            </div>
             <div class="column">
                 <div class="card">
                     <div class="side-crop">
