idk what I changed

--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 
 <body>
     <div class="titleCard">
-
         <h1 class="mainTitle">Hotelite</h1>
-        <div id="wrap">
+        <div id="searchCombo">
             <form action="" autocomplete="on">
-            <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input id="search_submit" value="Rechercher" type="submit">
+                <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
+                    id="search_submit" value="Search" type="submit">
             </form>
-          </div>
+        </div>
 
     </div>
     <div class="trendingArea">
