Added Flexbox to title

--- a/main.html
+++ b/main.html
@@ -12,14 +12,30 @@
 
 <body>
     <div class="titleCard">
-        <h1 class="mainTitle">Hotelite</h1>
-        <div id="searchCombo">
-            <form action="" autocomplete="on">
-                <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
-                    id="search_submit" value="Search" type="submit">
-            </form>
-        </div>
 
+        <div class="container">
+            <div>
+                <h1 class="mainTitle">Hotelite</h1>
+            </div>
+            <div id="searchCombo">
+                <form action="" autocomplete="on">
+                    <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
+                        id="search_submit" value="Search" type="submit">
+                </form>
+            </div>
+        </div>
+      <!--  <div class="column2" >
+            <h1 class="mainTitle">Hotelite</h1>
+        </div>
+       <div class="column2">
+            <div id="searchCombo">
+                <form action="" autocomplete="on">
+                    <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
+                        id="search_submit" value="Search" type="submit">
+                </form>
+            </div>
+       </div>
+-->
     </div>
     <div class="trendingArea">
         <div class="row">
