Changed Something IDK

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title></title>
     <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
+        <script src="https://kit.fontawesome.com/7ce3b8b35e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/styles.css">
 </head>
 
@@ -17,10 +18,10 @@
             <div>
                 <h1 class="mainTitle">Hotelite</h1>
             </div>
-            <div id="searchCombo">
+            <div class="searchCombo">
                 <form action="" autocomplete="on">
-                    <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
-                        id="search_submit" value="Search" type="submit">
+                    <input id="search" name="search" type="text" placeholder="What're we looking for ?">
+                    <i class="fas fa-search"></i>
                 </form>
             </div>
         </div>
