Fixing up Hotel Template

--- a/main.html
+++ b/main.html
@@ -43,14 +43,16 @@
                 <h3>Trending</h3>
             </div>
             <div class="column">
-                <div class="card">
-                    <div class="side-crop">
-                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+               <a href="hotelTemplate.html">
+                    <div class="card">
+                        <div class="side-crop">
+                            <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                        </div>
+                        <div class="conatiner">
+                            <p class="title">Skarner Gaming</p>
+                        </div>
                     </div>
-                    <div class="conatiner">
-                        <p class="title">Skarner Gaming</p>
-                    </div>
-                </div>
+               </a>
             </div>
             <div class="column">
                 <div class="card">
