--- a/hotelTemplate.html
+++ b/hotelTemplate.html
@@ -16,11 +16,13 @@
 
 <body>
     <script src="" async defer></script>
+    <div class="headerTitle">
+        <a href="main.html"><h1 id="logoClick">Hotelite</h1></a> 
+    </div>
     <div class="titleCard big">
-
         <div class="container">
             <div class="imageHolder">
-                    <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
             </div>
             <div class="coolInfo">
                 <p id="hotelTitle">Skarner Gaming</p>
