Fixed up header a bit

--- a/hotelTemplate.html
+++ b/hotelTemplate.html
@@ -18,6 +18,7 @@
     <script src="" async defer></script>
     <div class="headerTitle">
         <a href="main.html"><h1 id="logoClick">Hotelite</h1></a> 
+        <div class="aboutText"><a href=""><p>about</p></a></div>
     </div>
     <div class="titleCard big">
         <div class="container">
