Title working at any size now

--- a/main.html
+++ b/main.html
@@ -7,9 +7,10 @@
     <title></title>
     <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-        <script src="https://kit.fontawesome.com/7ce3b8b35e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7ce3b8b35e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/styles.css">
 </head>
+
 <body>
     <div class="titleCard">
 
@@ -19,12 +20,12 @@
             </div>
             <div class="searchCombo">
                 <form action="" autocomplete="on">
-                    <input id="search" name="search" type="text" placeholder="What're we looking for ?">
-                    <i class="fas fa-search"></i>
+                    <input id="search" name="search" type="text" placeholder="What are we looking for?">
+                    <i class="fas fa-search" style="color:#f4d06f ;"></i>
                 </form>
             </div>
         </div>
-      <!--  <div class="column2" >
+        <!--  <div class="column2" >
             <h1 class="mainTitle">Hotelite</h1>
         </div>
        <div class="column2">
@@ -43,7 +44,7 @@
                 <h3>Trending</h3>
             </div>
             <div class="column">
-               <a href="hotelTemplate.html">
+                <a href="hotelTemplate.html">
                     <div class="card">
                         <div class="side-crop">
                             <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
@@ -52,29 +53,33 @@
                             <p class="title">Skarner Gaming</p>
                         </div>
                     </div>
-               </a>
+                </a>
             </div>
             <div class="column">
-                <div class="card">
-                    <div class="side-crop">
-                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                <a href="hotelTemplate.html">
+                    <div class="card">
+                        <div class="side-crop">
+                            <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                        </div>
+                        <div class="conatiner">
+                            <p class="title">Skarner Gaming</p>
+                        </div>
                     </div>
-                    <div class="conatiner">
-                        <p class="title">Skarner Gaming</p>
-                    </div>
-                </div>
+                </a>
             </div>
-            <div class="column">
-                <div class="card">
-                    <div class="side-crop innershadow">
-                        <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+            <a href="hotelTemplate.html">
+                <div class="column">
+                    <div class="card">
+                        <div class="side-crop innershadow">
+                            <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                        </div>
+                        <div class="conatiner">
+                            <p class="title">Skarner Gaming</p>
+                        </div>
                     </div>
-                    <div class="conatiner">
-                        <p class="title">Skarner Gaming</p>
-                    </div>
-                </div>
-            </div>
+            </a>
         </div>
+    </div>
 
 
     </div>
