Starting to fix styling on hotelTemplate

--- a/hotelTemplate.html
+++ b/hotelTemplate.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
 
 <head>
@@ -12,13 +9,19 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="src/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <script src="" async defer></script>
     <div class="headerTitle">
-        <a href="main.html"><h1 id="logoClick">Hotelite</h1></a> 
-        <div class="aboutText"><a href=""><p>about</p></a></div>
+        <a href="main.html">
+            <h1 id="logoClick">Hotelite</h1>
+        </a>
+        <div class="aboutText"><a href="">
+                <p>about</p>
+            </a></div>
     </div>
     <div class="titleCard big">
         <div class="container">
@@ -26,11 +29,13 @@
                 <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
             </div>
             <div class="coolInfo">
-                <p id="hotelTitle">Skarner Gaming</p>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <p class="hotelTitle">Skarner Gaming</p>
+                    <p class="perNight"><span class="priceTag">$399</span> Per Night </p>
+                <span></span>
+                <ul class="hotelDetails">
+                    <li>Rating : 5 stars (or whatever)</li>
+                    <li>City: Oshawa</li>
+                    <li>Price per night: 2 dollars(good)</li>
                 </ul>
             </div>
         </div>
