--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                 <h1 class="mainTitle">Hotelite</h1>
             </div>
             <div class="searchCombo">
-                <form action="" autocomplete="on">
+                <form action="">
                     <input id="search" name="search" type="text" placeholder="What are we looking for?">
                     <i class="fas fa-search" style="color:#f4d06f ;"></i>
                 </form>
