--- a/hotelTemplate.html
+++ b/hotelTemplate.html
@@ -19,24 +19,36 @@
         <a href="main.html">
             <h1 id="logoClick">Hotelite</h1>
         </a>
-        <div class="aboutText"><a href="">
+        <div class="aboutText"><a href="about.html">
                 <p>about</p>
             </a></div>
     </div>
     <div class="titleCard big">
         <div class="container">
             <div class="imageHolder">
-                <img src="src/skarnerTemp.png" alt="SKARNERGAMING" style="width: 100%;">
+                <img src="src/img/1-1.jpg" alt="SKARNERGAMING" style="width: 100%;">
             </div>
             <div class="coolInfo">
-                <p class="hotelTitle">Skarner Gaming</p>
-                    <p class="perNight"><span class="priceTag">$399</span> Per Night </p>
+                <p class="hotelTitle">La Quinta Inn & Suites</p>
+                <p class="perNight"><span class="priceTag">$399</span> Per Night </p>
                 <span></span>
                 <ul class="hotelDetails">
-                    <li>Rating : 5 stars (or whatever)</li>
+                    <li>Rating :</li>
+                    <div class="stars">
+                        <input type="radio" id="star1" name="rating" value="1" /><input type="radio" id="star2" name="rating" value="2" /><input type="radio" id="star3" name="rating" value="3" /><input type="radio" id="star4" name="rating" value="4" /><input type="radio" id="star5" name="rating" value="5" />
+                        
+                        <label for="star1" aria-label="Banana">1 star</label><label for="star2">2 stars</label><label for="star3">3 stars</label><label for="star4">4 stars</label><label for="star5">5 stars</label>
+                      </div>
                     <li>City: Oshawa</li>
-                    <li>Price per night: 2 dollars(good)</li>
                 </ul>
+                <div class="reviews">
+                    <h3>Reviews:</h3>
+                    <p>Great boutique hotel. Convenient location, fresh and tasty breakfast, nice views!</p>
+                    <p>Clean and nice rooms. Dark sketchy road leading to entrance could be improved. Drug addicts and
+                        homeless hanging around that road each morning/night.</p>
+                    <p>Great location and nice little hotel. Breakfast was good, staff friendly and they upgraded my
+                        room without asking so that was great. You won't go wrong here.</p>
+                </div>
             </div>
         </div>
     </div>
