PHP implimented in the hoteltemplate

--- a/about.html
+++ b/about.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-<p>there is no about page</p>
-        
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
+
+<body>
+    <p>there is no about page</p>
+    <img src="src/img/skarner.gif" alt="skarnergaming">
+    <audio controls autoplay>
+        <source src="src/Robot rock short.mp3" type="audio/mpeg"> 
+    </audio>
+
+    <script src="" async defer></script>
+</body>
+
 </html>
