Started on login page

--- a/main.html
+++ b/main.html
@@ -25,18 +25,6 @@
                 </form>
             </div>
         </div>
-        <!--  <div class="column2" >
-            <h1 class="mainTitle">Hotelite</h1>
-        </div>
-       <div class="column2">
-            <div id="searchCombo">
-                <form action="" autocomplete="on">
-                    <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input
-                        id="search_submit" value="Search" type="submit">
-                </form>
-            </div>
-       </div>
--->
     </div>
     <div class="trendingArea">
         <div class="row">
@@ -44,7 +32,7 @@
                 <h3>Trending</h3>
             </div>
             <div class="column">
-                <a href="hotelTemplate.php?id=1">
+                <a href="hotelsite.php?id=1">
                     <div class="card">
                         <div class="side-crop">
                             <img src="src/img/1-1.jpg" alt="SKARNERGAMING" style="width: 100%;">
@@ -56,7 +44,7 @@
                 </a>
             </div>
             <div class="column">
-                <a href="hotelTemplate.php?id=2">
+                <a href="hotelsite.php?id=2">
                     <div class="card">
                         <div class="side-crop">
                             <img src="src/img/2-1.jpg" alt="SKARNERGAMING" style="width: 100%;">
@@ -67,7 +55,7 @@
                     </div>
                 </a>
             </div>
-            <a href="hotelTemplate.php?id=3">
+            <a href="hotelsite.php?id=3">
                 <div class="column">
                     <div class="card">
                         <div class="side-crop">
